--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       </div>
     </div>
     
+    <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.6/firebase.js'></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script type="text/javascript" src="js/knockout.js"></script>
