--- a/index.html
+++ b/index.html
@@ -28,23 +28,36 @@
       </nav>
     </div>
 
-    <div class="row">
-      <div class="small-12 columns top">
-            <div class="testimonial-wrap">
-              <div class="row">
-                <div id="prayers" class="row prayer_list" data-bind="foreach: prayers" style="display:none;">
-                  <div class="large-4 columns testimonial">
-                    <div class="quote">
-                      <p><span data-bind="css: type " data-bind="text: type"></span><span class="prayer" data-bind="text: prayer"></span></p>
-                    </div>
-                    <div class="student">
-                      <p data-bind="text: name"></p>
-                      <p data-bind="text: date"></p>
-                    </div>
-                  </div>
+    <div class="row body">
+      <div class="small-9 columns top">
+          <h5>1 John 5:14-15</h5>
+          <p><em>And this is the confidence which we have before Him, that, if we ask anything according to His will, He hears us. And if we know that He hears us in whatever we ask, we know that we have the requests which we have asked from Him.</em></p>
+          <p>We believe in the power of pray and we would love to pray with you, and for you to join us in praying. Please add your requests 
+            <a href="#" id="form_link">here</a></p>
+        <div class="testimonial-wrap">
+          <div class="row">
+            <div id="prayers" class="row prayer_list" data-bind="foreach: prayers" style="display:none;">
+              <div class="small-6 columns testimonial">
+                <div class="quote">
+                  <p><span data-bind="css: type " data-bind="text: type"></span><span class="prayer" data-bind="text: prayer"></span></p>
+                </div>
+                <div class="student">
+                  <p data-bind="text: name"></p>
+                  <p data-bind="text: date"></p>
                 </div>
               </div>
-            </div>  
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="small-3 columns top">
+        <div class="">
+          <a href="#">Links here</a>
+        </div>
+      </div>
+    </div>
+    <div class="row body">
+      <div class="small-10 columns">  
           <h5>How we can be praying for you?</h5>
             <form data-bind="submit: postForm" id="prayer_form" class="custom" data-abide>
               <div class="row">
@@ -66,19 +79,18 @@
                 </div>
               </div>
               <div class="row">
-                <div class="large-12 columns">
-                  <!--<textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for"></textarea>
-                  <small class="error">Please enter message</small>-->
+                  <div class="large-12 columns">
                    <div class="text-field"> 
                     <label>Your Prayer <small>required</small> 
                      </label> 
-                     <textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for"></textarea>
+                     <textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for" pattern="text_field"></textarea>
                     <small class="error">Ooops, we didn't get that...</small>
-                </div>
+                    </div>
+                  </div>
               </div>
               <input class="small round button" id="submit" type="submit" value="Submit">
             </form>
-      </div>
+        </div>
     </div>
     
     <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.6/firebase.js'></script>
