Move to one column for better mobile display

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="testimonial-wrap">
           <div class="row">
             <div id="prayers" class="row prayer_list" data-bind="foreach: prayers" style="display:none;">
-              <div class="small-6 columns testimonial">
+              <div class="small-12 columns testimonial">
                 <div class="quote">
                   <p><span data-bind="css: type " data-bind="text: type"></span><span class="prayer" data-bind="text: prayer"></span></p>
                 </div>
@@ -83,7 +83,7 @@
                    <div class="text-field"> 
                     <label>Your Prayer <small>required</small> 
                      </label> 
-                     <textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for" pattern="text_field"></textarea>
+                     <textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for"></textarea>
                     <small class="error">Ooops, we didn't get that...</small>
                     </div>
                   </div>
