--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
     </div>
 
     <div class="row body">
-      <div class="small-9 columns top">
-          <p><em>pray continually, give thanks in all circumstances; for this is God’s will for you in Christ Jesus.</em>
-          <small>1 Thessalonians 5:17-18 (NIV)</small>
-          </p>
-          <p>
-            We would love to pray with you,<a href="#" id="form_link"> let us know how</a></p>
+      <div class="small-8 columns top">
+          <p><em>pray continually, give thanks in all circumstances; for this is God’s will for you in Christ Jesus.  </em>
+            <small> 1 Thessalonians 5:17-18 (NIV)</small></p>
+          <p>We would love to pray with you,<a href="#" id="form_link"> let us know how</a></p>
           <hr />
         <div class="testimonial-wrap">
           <div class="row">
@@ -64,6 +62,11 @@
           <p>
             <a class="webicon tumblr" href="http://www.tumblr.com/blog/cthreeya">
               Tumblr
+            </a>
+          </p>
+          <p>
+            <a class="webicon instagram" href="http://instagram.com/cthreeya">
+              Instagram
             </a>
           </p>
           </ul>
