--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   </head>
   <body>
 
-    <div class="contain-to-grid sticky" data-options="sticky_on: large">
-      <nav class="top-bar" data-topbar>
-        <h3 class="banner">C3 Young Adults</h3>
-      </nav>
+    <div class="row body">
+      <div class="small-12 columns banner">
+        <img src="img/banner.jpg"></img>
+      </div>
     </div>
 
     <div class="row body">
-      <div class="small-8 columns top">
-          <p><em>pray continually, give thanks in all circumstances; for this is God’s will for you in Christ Jesus.  </em>
+      <div class="small-12 columns">
+          <p class="centre"><em>pray continually, give thanks in all circumstances; for this is God’s will for you in Christ Jesus.  </em>
             <small> 1 Thessalonians 5:17-18 (NIV)</small></p>
           <p>We would love to pray with you,<a href="#" id="form_link"> let us know how</a></p>
           <hr />
@@ -47,35 +47,11 @@
           </div>
         </div>
       </div>
-      <div class="small-3 columns top">
-        <div class="">
-          <p>
-            <a class="webicon twitter" href="http://twitter.com/cthreeya">
-              Twitter
-            </a>
-          </p>
-          <p>
-            <a class="webicon facebook" href="http://www.facebook.com/CthreeYA">
-              Facebook
-            </a>
-          </p>
-          <p>
-            <a class="webicon tumblr" href="http://www.tumblr.com/blog/cthreeya">
-              Tumblr
-            </a>
-          </p>
-          <p>
-            <a class="webicon instagram" href="http://instagram.com/cthreeya">
-              Instagram
-            </a>
-          </p>
-          </ul>
-        </div>
-      </div>
     </div>
     <div class="row body">
-      <div class="small-10 columns">  
-          <h5>How we can be praying for you?</h5>
+      <div class="small-12 columns">
+        <hr />
+          <p>How we can be praying for you?</p>
             <form data-bind="submit: postForm" id="prayer_form" class="custom" data-abide>
               <div class="row">
                 <div class="large-12 columns radios">
@@ -98,28 +74,32 @@
               <div class="row">
                   <div class="large-12 columns">
                    <div class="text-field"> 
-                    <label>Your Prayer <small>required</small> 
-                     </label> 
-                     <textarea id="request" required placeholder="Tell what we can be praising God for or what we can pray for"></textarea>
-                    <small class="error">Ooops, we didn't get that...</small>
+                    <label>Your Prayer <small>required</small></label> 
+                     <textarea maxlength="2500" id="request" rows="6" required placeholder="Tell what we can be praising God for or what we can pray for"></textarea>
                     </div>
                   </div>
               </div>
               <input class="small round button" id="submit" type="submit" value="Submit">
             </form>
+            <hr />
         </div>
     </div>
+    <div class="row">
+      <div class="small-12 columns top centre">
+        <a class="webicon twitter" href="http://twitter.com/cthreeya">Twitter</a>
+        <a class="webicon facebook" href="http://www.facebook.com/CthreeYA">Facebook</a>
+        <a class="webicon tumblr" href="http://www.tumblr.com/blog/cthreeya">Tumblr</a>
+        <a class="webicon instagram" href="http://instagram.com/cthreeya">Instagram</a>
+      </div>
+    </div>
     
-    <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.6/firebase.js'></script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/knockout.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script src="js/foundation/foundation.js"></script>
-    <script src="js/foundation/foundation.topbar.js"></script>
-    <script src="js/foundation/foundation.abide.js"></script>
-    <!-- Other JS plugins can be included here -->
+     <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.6/firebase.js'></script>
+     <script src="js/vendor/jquery.js"></script>
+     <script src="js/foundation.min.js"></script>
+     <script src="js/jquery.js"></script>
+     <script type="text/javascript" src="js/knockout.js"></script>
+     <script type="text/javascript" src="js/index.js"></script>
+     <script src="js/foundation/foundation.js"></script>
 
   <script>
     $(document).foundation();
