testing with background image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="row body">
-      <div class="small-12 columns">
+      <div class="small-12 columns content">
         <hr />
           <p>How we can be praying for you?</p>
             <form data-bind="submit: postForm" id="prayer_form" class="custom" data-abide>
