Adding links, favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>C3 Young Adults</title>
+    <title>C3 YOUNG ADULTS</title>
 
     <link rel="stylesheet" href="css/foundation.css" />
       <!-- Social icon fonts -->
@@ -14,6 +14,8 @@
     <!-- Google fonts -->
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/webicons.css">
+
+    <link rel="shortcut icon" href="img/favicon.ico" />
 
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -90,6 +92,9 @@
         <a class="webicon facebook" href="http://www.facebook.com/CthreeYA">Facebook</a>
         <a class="webicon tumblr" href="http://www.tumblr.com/blog/cthreeya">Tumblr</a>
         <a class="webicon instagram" href="http://instagram.com/cthreeya">Instagram</a>
+      </div>
+      <div class="centre">
+        <small><a href="http://www.cthree.org">Cambridge Community Church</a></small>
       </div>
     </div>
     
